[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finllm"
version = "0.1.0"
description = "A finance-focused LLM and quant research toolkit"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "QuantLib",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["finllm*"]
